# align

./: dune-project  format.opam
.github/workflows/: build.yml
lib/: Align.ml  Align.mli  Aline.ml  Common.ml  Config.ml  Config.mli  IO.ml  IO.mli  Line.ml  Line.mli  Match.ml  Match.mli  Transformation.ml  Util.ml  dune
test/: dune
